# prog-5-j1-wallet

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: clang-tidy.yml
src/: main.cpp  wallet.h
